# LoRaMac-node

./: CMakeLists.txt  README.md
cmake/: gdb-helper.cmake  launch.json.in  samd21.cmake
src/: CMakeLists.txt
src/apps/LoRaMac/: CMakeLists.txt
src/apps/LoRaMac/common/: cli.c  gps.c  gps.h  gpsJQ.h
src/apps/LoRaMac/fuota-test-01/NucleoL152/: main.c
src/apps/LoRaMac/periodic-uplink-lpp/NucleoL152/: main.c
src/apps/LoRaMac/periodic-uplink-lpp/RAK5205/: main.c
src/apps/LoRaMac/periodic-uplink-lpp/SAMD21/: main.c
src/apps/tx-cw/: CMakeLists.txt
src/apps/tx-cw/NucleoL152/: main.c
src/apps/tx-cw/SAMD21/: main.c
src/boards/NucleoL152/: CMakeLists.txt  adc-board.c  board-config.h  board.c  e22-900m30s-board.c  gps-board.c  sx1262mbxdas-board.c  uart-board.c
src/boards/NucleoL152/cmsis/: stm32l1xx_hal_conf.h
src/boards/RAK5205/: CMakeLists.txt  board-config.h  board.c  gpio-board.c  gps-board.c  sx1276-board.c  uart-board.c
src/boards/RAK5205/cmsis/: stm32l1xx_hal_conf.h
src/boards/SAMD21/: CMakeLists.txt  board-config.h  board.c  eeprom-board.c  gpio-board.c  i2c-board.c  spi-board.c  sx1276-board.c  uart-board.c  usb-board.c
src/boards/mcu/samd21/: hw_timer.c
src/boards/mcu/samd21/config/: RTE_Components.h  hpl_adc_config.h  hpl_eic_config.h  hpl_gclk_config.h  hpl_sercom_config.h  hpl_sysctrl_config.h  peripheral_clk_config.h
src/boards/mcu/samd21/hpl/rtc/: hpl_rtc.c
src/boards/mcu/samd21/hpl/spi/: spi_lite.c  spi_lite.h
src/boards/mcu/samd21/hpl/usart/: usart_lite.c  usart_lite.h
src/boards/mcu/samd21/samd21a/include/component/: dsu.h
src/mac/: CMakeLists.txt
src/mac/region/: RegionRU864.h  RegionUS915.c
src/peripherals/soft-se/: se-identity.h
src/radio/sx126x/: sx126x.c
src/radio/sx1276/: sx1276.h
src/system/: gps.c  gps.h  uart.h
